<resources>
    <string name="hello">你好，公交公司欢迎您 </string>
    <string name="app_name">智慧朝阳</string>
    <string name="login_topleft">  退出</string>
    <string name="menu_exit">退出</string>
    <string name="common_programe_btn">查询</string>
    <string name="zb_site_btn">地图</string>
    <string name="shutdown_btn">换乘</string>
    <string name="setting_btn">关于</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="center_mouse">Mouse @</string>
    <string name="color_mode">Color Mode</string>
    <string name="Jpush_message">点击图标前往智慧朝阳</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="delete_key">Delete Selected Key</string>
    <string name="delete_key_list">Delete Key List</string>
    <string name="disconnect">Disconnect</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="info">关于软件</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
    <string name="input_mode_mouse">切换为点击控制方式</string>
    <string name="input_mode_panning">移动可以滑动桌面</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
    <string name="UMEmptyFbNotAllowed">Please input your feedback.</string>
    <string name="UMContentTooLong">"Your content was over 140 characters. You'll have to be more clever."</string>
    <string name="UMFbList_ListItem_State_ReSend">Fail,Press to resend</string>
    <string name="UMFbList_ListItem_State_Sending">Sending...</string>
    <string name="UMFbList_ListItem_State_Fail">Fail</string>
    <string name="UMFb_Atom_State_Fail">Fail</string>
    <string name="UMFb_Atom_State_Sending">Sending...</string>
    <string name="UMFb_Atom_State_Resend">Fail,press to resend</string>
    <string name="UMFbList_ListItem_State_Resending">Resending</string>
    <string name="UMFeedbackUmengTitle">Feedback</string>
    <string name="UMFeedbackListTitle">My Feedback</string>
    <string name="UMFeedbackConversationTitle">My Feedback</string>
    <string name="UMFeedbackTitle">Every word you write will benefit us.</string>
    <string name="UMFeedbackContent">Input your suggestions here</string>
    <string name="UMFeedbackSummit">Submit</string>
    <string name="UMFeedbackGoBack">Return</string>
    <string name="UMFeedbackGotIt">Got it</string>
    <string name="UMFeedbackSeeDetail">See Detail</string>
    <string name="UMViewThread">View Thread</string>
    <string name="UMNewReplyAlertTitle">"You've got reply"</string>
    <string name="UMDeleteThread">Delete Thread</string>
    <string name="UMViewFeedback">View Feedback</string>
    <string name="UMDeleteFeedback">Delete Feedback</string>
    <string name="UMResendFeedback">Resend Feedback</string>
    <string name="UMDeleteMsg">Delete message</string>
    <string name="UMNewReplyFlick">Got new reply</string>
    <string name="UMNewReplyTitle">Got new reply</string>
    <string name="UMNewReplyHint">Click to view</string>
    <string name="umeng_share_shareto_top">选择分享方式</string>
    <string name="umeng_share_shareto_renr">人人网</string>
    <string name="umeng_share_shareto_sina">新浪微博</string>
    <string name="umeng_share_shareto_tenc">腾讯微博</string>
    <string name="umeng_share_update_edittext_hint">说点什么...</string>
    <string name="umeng_share_update_send">发布</string>
    <string name="umeng_share_update_imgLoadFailed">抱歉，图片文件加载失败！</string>
    <string name="umeng_share_update_contentEmpty">抱歉，分享内容不能为空！</string>
    <string name="umeng_share_update_uneditTopic">抱歉，尚未编辑话题！</string>
    <string name="umeng_share_update_updated">发布成功！</string>
    <string name="umeng_share_update_repeated">抱歉，重复发布！</string>
    <string name="umeng_share_update_fileToLarge">抱歉，图片大小超过限制！</string>
    <string name="umeng_share_update_fileNotExist">抱歉，文件不存在！</string>
    <string name="umeng_share_update_msgLengthExtendsLimit">抱歉，字数超过限制！</string>
    <string name="umeng_share_update_networkUnavailable">抱歉，网络原因请稍后再试！</string>
    <string name="umeng_share_update_extendsSendLimit">抱歉，已超过一小时内的最大发送限制，请稍后重试！</string>
    <string name="umeng_share_update_uidNotExist">尚未绑定账号或有效期已过，请重新绑定</string>
    <string name="umeng_share_update_appBlocked">抱歉，该分享功能已被停用！</string>
    <string name="umeng_share_oauth_linkserver">正在加载授权页面，请稍等...</string>
    <string name="umeng_share_snsservice_linkServer">正在连接服务器，请稍等</string>
    <string name="umeng_share_snsservice_oauthSuccessed">授权成功！</string>
    <string name="umeng_share_snsservice_oauthFailed">抱歉，授权失败！</string>
    <string name="umeng_share_snsservice_noNetwork">抱歉，无网络服务！</string>
    <string name="umeng_share_renr">open</string>
    <string name="umeng_share_sina">open</string>
    <string name="umeng_share_tenc">open</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMToast_IsUpdating">Updating...</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="umeng_xp_size">Size</string>
    <string name="umeng_xp_action_open">open</string>
    <string name="umeng_xp_action_browse">browse</string>
    <string name="umeng_xp_action_download">install</string>
    <string name="umeng_xp_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_xp_back_to_top">Top</string>
    <string name="umeng_xp_more">more</string>
    <string name="umeng_xp_dowloadOrNot">Download the app?</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_logo">智慧朝阳</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_activity_bus_map">BusMapActivity</string>
    <string name="title_activity_trans">TransActivity</string>
    <string name="title_activity_routel_info">RoutelInfoActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_line_info">LineInfoActivity</string>
    <string name="title_activity_trans_info">TransInfoActivity</string>
    <string name="title_activity_news_info">NewsInfoActivity</string>
    <string name="travel">出行</string>
    <string name="shop">购物</string>
    <string name="app">更多</string>
    <string name="life">生活</string>
    <string name="bus">公交</string>
    <string name="life_food">美食</string>
    <string name="life_funny">休闲</string>
    <string name="car">汽车</string>
    <string name="flight_num">请输入航班号</string>
    <string name="train_num">请输入车次</string>
    <string name="dst_addr">请输入目的地</string>
    <string name="IC_dialog_title">IC卡余额查询</string>
    <string name="life_convenient">便民</string>
    <string name="car_tv_item0">购车指南</string>
    <string name="car_tv_summary0">现车，折扣，活动信息</string>
    <string name="car_tv_item1">租车热线</string>
    <string name="car_tv_summary1">车辆出租信息发布</string>
    <string name="car_tv_item2">陪练代驾</string>
    <string name="car_tv_summary2">驾校、道路陪练信息发布</string>
    <string name="car_tv_item3">品牌驾校</string>
    <string name="car_tv_summary3">师资力量优秀的驾校</string>
    <string name="car_tv_item4">汽车美容</string>
    <string name="car_tv_summary4">车饰、改装、车身保养服务</string>
    <string name="car_tv_item5">二手车讯</string>
    <string name="car_tv_summary5">提供二手车购买出售信息</string>
    <string name="ad_list_summery">商家明细信息展示，包括经营范围等</string>
    <string name="dst_0">鄂尔多斯</string>
    <string name="dst_1">徐州</string>
    <string name="dst_2">兰州</string>
    <string name="dst_3">温州</string>
    <string name="dst_4">长沙</string>
    <string name="dst_5">银川</string>
    <string name="dst_6">包头</string>
    <string name="dst_7">昆明</string>
    <string name="dst_8">杭州</string>
    <string name="dst_9">成都</string>
    <string name="dst_10">西安</string>
    <string name="dst_11">南宁</string>
    <string name="dst_12">广州</string>
    <string name="dst_13">深圳</string>
    <string name="dst_14">重庆</string>
    <string name="dst_15">三亚</string>
    <string name="dst_16">海口</string>
    <string name="dst_17">上海</string>
    <string name="dst_18">南京</string>
    <string name="dst_19">宁波</string>
    <string name="dst_20">珠海</string>
    <string name="dst_21">厦门</string>
    <string name="dst_22">汕头</string>
    <string name="dst_23">武汉</string>
    <string name="dst_24">贵阳</string>
    <string name="dst_25">无锡</string>
    <string name="dst_26">乌鲁木齐</string>
    <string name="price_0">700</string>
    <string name="price_1">700</string>
    <string name="price_2">700</string>
    <string name="price_3">700</string>
    <string name="price_4">700</string>
    <string name="price_5">700</string>
    <string name="price_6">700</string>
    <string name="price_7">700</string>
    <string name="price_8">700</string>
    <string name="price_9">800</string>
    <string name="price_10">800</string>
    <string name="price_11">800</string>
    <string name="price_12">800</string>
    <string name="price_13">800</string>
    <string name="price_14">800</string>
    <string name="price_15">800</string>
    <string name="price_16">800</string>
    <string name="price_17">800</string>
    <string name="price_18">800</string>
    <string name="price_19">800</string>
    <string name="price_20">800</string>
    <string name="price_21">800</string>
    <string name="price_22">800</string>
    <string name="price_23">800</string>
    <string name="price_24">800</string>
    <string name="price_25">800</string>
    <string name="price_26">1000</string>
    <string name="breakrule">请输入您的车牌号</string>
    <string name="channel_list_bottom_1">联系</string>
    <string name="channel_list_bottom_2">地图</string>
    <string name="channel_list_bottom_3">关注</string>
    <string name="channel_list_bottom_4">详细</string>
    <string name="shop_tv_item0">服装鞋帽</string>
    <string name="shop_tv_summary0">女装、男装、板鞋、休闲鞋、商务鞋...</string>
    <string name="shop_tv_item1">文体用品</string>
    <string name="shop_tv_summary1">文具、办公用具、体育用品、学习用品...</string>
    <string name="shop_tv_item2">图书音像</string>
    <string name="shop_tv_summary2">名著、经管、教参、考研、英语、视频资料...</string>
    <string name="shop_tv_item3">黄金饰品</string>
    <string name="shop_tv_summary3">黄金饰品、黄金投资品、珠宝、首饰、玉器...</string>
    <string name="shop_tv_item4">数码家电</string>
    <string name="shop_tv_summary4">智能手机、平板电脑、电视、数码相机...</string>
    <string name="shop_tv_item5">家具建材</string>
    <string name="shop_tv_summary5">时尚家饰、灯饰、工艺品、涂料...</string>
    <string name="shop_tv_item6">母婴用品</string>
    <string name="shop_tv_summary6">防辐射服、奶粉、婴儿服饰、护理用品...</string>
    <string name="shop_tv_item7">地方特产</string>
    <string name="about_app_name">智慧朝阳手机客户端Android版</string>
    <string name="about_app_right">朝阳思迈 版权所有</string>
    <string name="phone">联系电话</string>
    <string name="phone_number">0421-2610873</string>
    <string name="phone_400">400电话</string>
    <string name="phone_number_400">400-0421-020</string>
    <string name="weixin">微信公共帐号</string>
    <string name="weixin_code">kxcity</string>
    <string name="QQ">QQ联系</string>
    <string name="QQ_code">47481452</string>
    <string name="about_app_agreement">最终用户使用协议</string>
    <string name="d2code_download">扫描二维码下载</string>
    <string name="request_friend">如果您觉得应用不错请介绍给您的朋友</string>
</resources>